--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pqina/flip": "^1.8.4",
+    "bootstrap": "^5.3.3",
     "next": "^15.2.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-bootstrap": "^2.10.9",
+    "react-dom": "^19.0.0",
+    "react-split-flap-effect": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
